--- a/platformio.ini
+++ b/platformio.ini
@@ -8,46 +8,59 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32s3]
+[env:esp32-s3-devkitm-1]
 platform = espressif32
-board = esp32-s3-devkitc-1 
+board = esp32-s3-devkitm-1
 framework = arduino
-; upload_speed = 921600
+upload_speed = 921600
 monitor_speed = 115200
 
-; ESP32-S3R8 配置 - 8MB Flash + 8MB PSRAM
-; board_build.flash_size = 8MB
-; board_build.flash_mode = qio
-; ; 启用PSRAM
-; board_build.arduino.psram = enabled
+
+; ESP32-S3-DevKitM-1 配置 - 8MB Flash
+board_build.flash_size = 8MB
+board_build.flash_mode = dio
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
 
 lib_deps =
   lovyan03/LovyanGFX
 
 build_flags =
   -D LGFX_USE_V1
-  -D ST7789_WIDTH=${common.tft_width}
-  -D ST7789_HEIGHT=${common.tft_height}
-  -D ST7789_OFFSET_X=${common.tft_offset_x}
-  -D ST7789_OFFSET_Y=${common.tft_offset_y}
-  -D ST7789_FREQ=${common.tft_freq}
-  -D ST7789_MOSI=${common.tft_mosi}
-  -D ST7789_MISO=${common.tft_miso}
-  -D ST7789_SCLK=${common.tft_sclk}
-  -D ST7789_CS=${common.tft_cs}
-  -D ST7789_DC=${common.tft_dc}
-  -D ST7789_RST=${common.tft_rst}
-  -D ST7789_BL=${common.tft_bl}
-  -D ST7789_BL_ACTIVE=${common.tft_bl_active_high}
-  ; -D BOARD_HAS_PSRAM
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D TFT_WIDTH=${common.tft_width}
+  -D TFT_HEIGHT=${common.tft_height}
+  -D TFT_OFFSET_X=${common.tft_offset_x}
+  -D TFT_OFFSET_Y=${common.tft_offset_y}
+  -D TFT_FREQ=${common.tft_freq}
+  -D TFT_MOSI=${common.tft_mosi}
+  -D TFT_MISO=${common.tft_miso}
+  -D TFT_SCLK=${common.tft_sclk}
+  -D TFT_CS=${common.tft_cs}
+  -D TFT_DC=${common.tft_dc}
+  -D TFT_RST=${common.tft_rst}
+  -D TFT_BL=${common.tft_bl}
+  -D TFT_BL_ACTIVE=${common.tft_bl_active_high}
 
 ; ----- Common variables for ST7789 (edit to match your wiring) -----
 [common]
 tft_width = 240
-tft_height = 320
+tft_height = 240
 tft_offset_x = 0
 tft_offset_y = 0
 tft_freq = 40000000
+
+; ESP32-S3-DevKitM-1 pins for SPI TFT display
+; tft_mosi = 7        ; MOSI
+; tft_sclk = 6        ; SCLK
+; tft_miso = -1       ; -1 means unused (3-wire SPI)
+; tft_cs   = 10       ; CS (Chip Select)
+; tft_dc   = 9        ; DC (Data/Command)
+; tft_rst  = 8        ; RST (Reset)
+; tft_bl   = 5        ; BL (Backlight)
+tft_bl_active_high = 1 ; 1: BL HIGH=on, 0: LOW=on
+
 
 ; SPI pins (set according to your wiring)
 ; tft_mosi = 3
@@ -77,4 +90,3 @@ tft_cs   = 3         ; -1 if panel CS is tied low
 tft_dc   = 4
 tft_rst  = 5        ; -1 if panel RST is pulled-up
 tft_bl   = 6         ; -1 if fixed backlight
-tft_bl_active_high = 1 ; 1: BL HIGH=on, 0: LOW=on
