--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ monitor_speed = 115200
 
 ; ESP32-S3-DevKitM-1 配置 - 8MB Flash
 board_build.flash_size = 8MB
-board_build.flash_mode = dio
+board_build.flash_mode = qio
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 
