--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,14 @@ build_flags =
   -D TFT_RST=${common.tft_rst}
   -D TFT_BL=${common.tft_bl}
   -D TFT_BL_ACTIVE=${common.tft_bl_active_high}
+  -D TOUCH_XPT2046=${common.touch_xpt2046}
+  -D TOUCH_CS=${common.touch_cs}
+  -D TOUCH_IRQ=${common.touch_irq}
+  -D TOUCH_SCLK=${common.touch_sclk}
+  -D TOUCH_MOSI=${common.touch_mosi}
+  -D TOUCH_MISO=${common.touch_miso}
+  -D TOUCH_FREQ=${common.touch_freq}
+  -D TOUCH_ROTATION=${common.touch_rotation}
 
 ; ----- Common variables for ST7789 (edit to match your wiring) -----
 [common]
@@ -61,6 +69,20 @@ tft_freq = 40000000
 ; tft_bl   = 5        ; BL (Backlight)
 tft_bl_active_high = 1 ; 1: BL HIGH=on, 0: LOW=on
 
+
+; ---- Optional touch (XPT2046 over SPI) ----
+; Enable = 1, disable = 0
+; ---- Optional touch (XPT2046 over SPI) ----
+; Enable = 1, disable = 0
+touch_xpt2046 = 1
+; When enabled, set CS/IRQ and touch SPI pins (no inline comments)
+touch_cs   = 7
+touch_irq  = 11
+touch_sclk = 8
+touch_mosi = 9
+touch_miso = 10
+touch_freq = 2500000
+touch_rotation = 0
 
 ; SPI pins (set according to your wiring)
 ; tft_mosi = 3
